--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@ title: Welcome!
 subtitle: Zhengwei's Home
 ---
 
-<a href="url">https://www.computing.dcu.ie/~tward/ Prof. Tomas E. Ward</a>
+<a href="https://www.computing.dcu.ie/~tward/">Prof. Tomas E. Ward</a>
 
 
 
