--- a/index.html
+++ b/index.html
@@ -5,6 +5,6 @@ subtitle: Zhengwei's Home
 ---
 
 <a href="https://www.computing.dcu.ie/~tward/">Prof. Tomas E. Ward</a>
-
+<a href="http://www.w3school.com.cn/">Visit W3School</a>
 
 
