--- a/index.html
+++ b/index.html
@@ -3,8 +3,10 @@ layout: home
 title: Welcome!
 subtitle: Zhengwei's Home
 ---
+<body>
+  <p> I <a href="https://www.computing.dcu.ie/~tward/">Prof. Tomas E. Ward</a> </p>
+</body>
 
-<a href="https://www.computing.dcu.ie/~tward/">Prof. Tomas E. Ward</a>
-<a href="http://www.w3school.com.cn/">Visit W3School</a>
+
 
 
