--- a/index.html
+++ b/index.html
@@ -5,10 +5,23 @@ subtitle: Zhengwei's Home
 ---
 <body>
   <p> 
-    I <a href="https://www.computing.dcu.ie/~tward/">Prof. Tomas E. Ward</a> 
-    aaaaaa
+    My name is Zheng-wei Wang (王正蔚). 
+    I obtained my Ph.D. at Insight Centre for Data Analytics, Dublin City University,
+    where I was advised by <a href="https://www.computing.dcu.ie/~tward/">Prof. Tomas E. Ward</a> 
+    and <a href="https://www.computing.dcu.ie/~ghealy/">Dr. Graham Healy</a>. 
+    My Ph.D. is carried out in the area of neuroscience and deep learning.
+    We proposed a Neuroscore derived from human's EEG signals to effectively evaluate the performance for Generative Adversarial Networks (GANs).
+    Here is my <a href="http://doras.dcu.ie/23729/">Ph.D. Thesis</a>.
+  </p>
+  <p>
+    I am currently a Research Fellow working with <a href="https://scholar.google.ch/citations?user=HZRejX4AAAAJ&hl=en">Prof. Aljosa Smolic</a>.
+    My current research interest focuses on video understanding especially for video action recognition.
   </p>
 </body>
+
+
+
+
 
 
 
