--- a/index.html
+++ b/index.html
@@ -17,6 +17,7 @@ subtitle: Zhengwei's Home
     I am currently a Research Fellow working with <a href="https://scholar.google.ch/citations?user=HZRejX4AAAAJ&hl=en">Prof. Aljosa Smolic</a>.
     My current research interest focuses on video understanding especially for video action recognition.
   </p>
+  <p align="center"><img src="assets/img/research/NAI_2.png" width="500" /></p>
 </body>
 
 
