--- a/index.html
+++ b/index.html
@@ -10,6 +10,10 @@ subtitle: Zhengwei's Home
     where I was advised by <a href="https://www.computing.dcu.ie/~tward/">Prof. Tomas E. Ward</a> 
     and <a href="https://www.computing.dcu.ie/~ghealy/">Dr. Graham Healy</a>. 
     My Ph.D. is carried out in the area of neuroscience and deep learning.
+    We basically build a system called Neuro-AI Interface for interacting deep neural networks with human neural systems.
+    As the figure showed below, 
+    <p align="center"><img src="assets/img/research/NAI_2.png" width="500" /></p>
+    
     We proposed a Neuroscore derived from human's EEG signals to effectively evaluate the performance for Generative Adversarial Networks (GANs).
     Here is my <a href="http://doras.dcu.ie/23729/">Ph.D. Thesis</a>.
   </p>
@@ -17,7 +21,6 @@ subtitle: Zhengwei's Home
     I am currently a Research Fellow working with <a href="https://scholar.google.ch/citations?user=HZRejX4AAAAJ&hl=en">Prof. Aljosa Smolic</a>.
     My current research interest focuses on video understanding especially for video action recognition.
   </p>
-  <p align="center"><img src="assets/img/research/NAI_2.png" width="500" /></p>
 </body>
 
 
