--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@ subtitle: Zhengwei's Home
     and <a href="https://www.computing.dcu.ie/~ghealy/">Dr. Graham Healy</a>. 
     My Ph.D. is carried out in the area of neuroscience and deep learning.
     We basically build a system called Neuro-AI Interface for interacting deep neural networks with human neural systems.
-    As the figure showed below, we first use Generative Adversarial Networks (GANs) to produce visual stimulus (i.e., images with different visual quality) 
+    As the figure shown below, we first use Generative Adversarial Networks (GANs) to produce visual stimulus (i.e., images with different visual quality) 
     to participants, then we can get the human's neural response i.e., EEG in this case for each image (downside path).
     At the same time, generated images are fed as inputs to a pre-trained deep neural network on the upside path,
     we also transfer the neural response to the deep neural network. Thus the deep neural network has ability for mapping from images to neural responses like a human brain.
