--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@ subtitle: Zhengwei's Home
     We use this framework succesfully to evaluate the performance for different GANs and we name this perceptual score as Neuroscore.
     More details related to this research can refer to our two papers: 
     <a href="https://arxiv.org/abs/1811.04172">Use of neural signals to evaluate the quality of generative adversarial network performance in facial image generation</a> 
-    and <a href="https://arxiv.org/abs/1905.04243">Synthetic-Neuroscore: Using A Neuro-AI Interface for Evaluating Generative Adversarial Networks</a>
+    and <a href="https://arxiv.org/abs/1905.04243">Synthetic-Neuroscore: Using A Neuro-AI Interface for Evaluating Generative Adversarial Networks</a>.
     My full Ph.D. Thesis talking about the "Cortically Coupled Image Computing" is provided <a href="http://doras.dcu.ie/23729/">here</a>.
   </p>
   <p align="center"><img src="assets/img/research/NAI_2.png" width="600" /></p> 
