--- a/index.html
+++ b/index.html
@@ -24,8 +24,8 @@ subtitle: Zhengwei's Home
   <p align="center"><img src="assets/img/research/NAI_2.png" width="600" /></p> 
   <p>
     I am currently a Research Fellow working with <a href="https://scholar.google.ch/citations?user=HZRejX4AAAAJ&hl=en">Prof. Aljosa Smolic</a> 
-    at <a href="https://v-sense.scss.tcd.ie/">V-SENSE</a>, Trinity College Dublin.
-    My current research interest focuses on video understanding especially for video action recognition.
+    at <a href="https://v-sense.scss.tcd.ie/">V-SENSE</a>, Trinity College Dublin. My current research interest focuses on video understanding 
+    especially for video action recognition.
   </p>
 </body>
 
